<resources>
    <string name="app_name">Simples</string>
    <string name="facebook_app_id">1481291165504641</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_firstname">Primeiro Nome</string>
    <string name="prompt_lastname">Último Nome</string>
    <string name="prompt_password">Palavra chaves</string>
    <string name="prompt_mobile">Telemóvel</string>
    <string name="prompt_birth_date">Data de nascimento</string>
    <string name="prompt_female">Mulher</string>
    <string name="prompt_male">Homem</string>
    <string name="prompt_address">Morada</string>
    <string name="prompt_postal_address">Código postal (XXXX-XXX)</string>
    <string name="prompt_town">Localidade</string>
    <string name="action_request_card">Pedir cartão</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">Login</string>
    <string name="authenticating">Autenticando!</string>
    <string name="sair">Pressione voltar novamente para sair!</string>
    <string name="value">%1$s EUR</string>

    <!-- Strings related to card -->
    <string name="p_name_title">Nome</string>
    <string name="p_name">%1$s %2$s</string>
    <string name="p_cardNumber_title">Número do cartão</string>
    <string name="p_cardNumber">%1$d</string>
    <string name="p_valDate_title">Data de validade</string>
    <string name="p_valDate">%1$s</string>
    <!-- Strings related to main -->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Terminar sessão</string>
    <string name="partners">Parceiros</string>
    <string name="card">Cartão</string>
    <string name="preferences">Preferências</string>
    <string name="favorites">Favoritos</string>
    <string name="user_name">%1$s %2$s</string>

    <!--Server error messages-->
    <string name="facebook_error">Houve um erro com a sessão do facebook</string>
    <string name="server_error">Algo correu mal, por favor tente mais tarde!</string>
    <string name="internet_error">Não foi detetado internet!</string>

    <!--Error codes-->
    <string name="rc_1">RC 1:</string>
    <string name="rc_2">RC 2:</string>
    <string name="rc_3">RC 3:</string>
    <string name="rc_4">RC 4:</string>
    <string name="rc_5">RC 5:</string>
    <string name="rc_6">RC 6:</string>
    <string name="rc_7">RC 7:</string>

    <!--Validation strings-->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!--Permission strings-->
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Navigation strings-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Strings for screen titles-->
    <string name="login">Iniciar sessão</string>
    <string name="title_activity_login">Iniciar sessão</string>
    <string name="title_activity_main">Simples</string>
    <string name="request_card">Pedir cartão</string>
    <string name="title_activity_request_card">Pedir cartão</string>
    <string name="first_time">Simples</string>
    <string name="title_activity_first_time">Simples</string>
    <string name="title_activity_partner_detail"></string>

    <!--Categories-->

    <!--Categories-->
    <string-array name="categories">
        <item>Todas as categorias</item>
        <item>Restaurantes</item>
        <item>Retalho alimentar</item>
        <item>Enternimento e Lazer</item>
        <item>Motores</item>
        <item>Comercio e Serviços</item>
        <item>Educação e Ensino</item>
        <item>Saúde e Bem-Estar</item>
        <item>Hotéis e Turismo</item>
        <item>Moda</item>
        <item>Desporto</item>
        <item>Casa e Decorações</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_preferences">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Font Awesome-->
    <string name="icon_marker">&#xf041;</string>
    <string name="icon_phone">&#xf095;</string>
    <string name="icon_envelop">&#xf0e0;</string>
    <string name="icon_gift">&#xf06b;</string>

    <!-- Validation Strings -->
    <string name="empty_validation">Campo obrigatório</string>
    <string name="email_validation">O email não é válido</string>
    <string name="conf_email_validation">Os emails não coincidem</string>
    <string name="password_validation">A palavra-chaves não é válida, no minímo tem de ter 4 caracteres</string>
    <string name="pCode_validation">Código postal inválido</string>
    <string name="mobile_validation">Número inválido</string>
    <string name="conf_password_validation">As palavras-chaves não coincidem</string>
    <string name="name_validation">O nome não é válido</string>
    <string name="network_validation">Não foi possível detetar internet, Não é possível efetuar o pedido</string>

    <!--Categories-->
    <string name="restaurantes">restaurantes</string>
    <string name="restaurantes_online">seo:restaurantes</string>
    <string name="retalho_alimentar">retalho-alimentar</string>
    <string name="retalho_alimentar_online">seo:retalho-alimentar</string>
    <string name="entretenimento_e_lazer">entretenimento-e-lazer</string>
    <string name="entretenimento_e_lazer_online">seo:entretenimento-e-lazer</string>
    <string name="reparacoes_automoveis">reparacoes-automoveis</string>
    <string name="reparacoes_automoveis_online">seo:reparacoes-automoveis</string>
    <string name="comercio_e_servicos">comercio-e-servicos</string>
    <string name="comercio_e_servicos_online">seo:comercio-e-servicos</string>
    <string name="educacao_e_ensino">educacao-e-ensino</string>
    <string name="educacao_e_ensino_online">seo:educacao-e-ensino</string>
    <string name="saude_e_bem_estar">saude-e-bem-estar</string>
    <string name="saude_e_bem_estar_online">seo:saude-e-bem-estar</string>
    <string name="hoteis_e_turismo">hoteis-e-turismo</string>
    <string name="hoteis_e_turismo_online">seo:hoteis-e-turismo</string>
    <string name="moda">moda</string>
    <string name="moda_online">seo:moda</string>
    <string name="desporto">desporto</string>
    <string name="desporto_online">seo:desporto</string>
    <string name="casa_e_decoracao">casa-e-decoracao</string>
    <string name="casa_e_decoracao_online">seo:casa-e-decoracao</string>

    <string-array name="partners_categories">
        <item>todas-as-categorias</item>
        <item>restaurantes</item>
        <item>retalho-alimentar</item>
        <item>entretenimento-e-lazer</item>
        <item>reparacoes-automoveis</item>
        <item>comercio-e-servicos</item>
        <item>educacao-e-ensino</item>
        <item>saude-e-bem-estar</item>
        <item>hoteis-e-turismo</item>
        <item>moda</item>
        <item>desporto</item>
        <item>casa-e-decoracao</item>
    </string-array>
    <string name="title_activity_payment_data">Dados para pagamento</string>
    <string name="warning_continue">Se já efetuou o pagamento, clique em continuar.</string>
    <string name="warning_payment"><Data><![CDATA[<b>O pagamento deverá ser efetuado no prazo de 24 horas. Terminado este prazo, o seu pedido será anulado.</b>]]> </Data></string>
    <string name="my_continue">Continuar</string>
    <string name="entity">Entidade</string>
    <string name="reference">Referência</string>
    <string name="value_title">Valor</string>

</resources>
