<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.CardFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/card_image_height"
            android:id="@+id/card_image"
            android:src="@drawable/cartao_simples"
            android:layout_margin="10dp"
            android:minWidth="300dp"
            android:layout_gravity="center" />
        <include
            layout="@layout/t_divider"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:id="@+id/div"
            android:layout_width="match_parent"
            android:layout_height= "@dimen/divider_height" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/card_title"
                android:textColor="@color/text_color"
                android:textAllCaps="true"
                android:text="@string/p_name_title"
                android:id="@+id/cardName_title"
                android:textStyle="bold"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/card_title_tx"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/text_color"
                android:text="@string/p_name"
                android:id="@+id/cardName" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/card_title"
                android:textColor="@color/text_color"
                android:textAllCaps="true"
                android:text="@string/p_cardNumber_title"
                android:id="@+id/cardNumber_title"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/card_title_tx"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/text_color"
                android:text="@string/p_cardNumber"
                android:id="@+id/cardNumber" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/card_title"
                android:textColor="@color/text_color"
                android:textAllCaps="true"
                android:text="@string/p_valDate_title"
                android:id="@+id/cardValDate_title"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/card_title_tx"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/text_color"
                android:text="@string/p_valDate"
                android:id="@+id/cardValDate" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/card_progress"
        android:visibility="gone"
        android:layout_gravity="center" />
</FrameLayout>
